forgot to do commits but this is the final piece

--- a/style.css
+++ b/style.css
@@ -5,14 +5,15 @@
 }
 
 body {
-    background-color: #d9dcd6;
+    background-color: #ffffff;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
-    color: #ffffff;
+    background-color: #313030;
+    color: #ff0000;
 }
 
 header h1 {
@@ -24,7 +25,6 @@ header h1 {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
 
@@ -38,7 +38,7 @@ header h1 {
 }
 
 a {
-    color: #ffffff;
+    color: #ff0000;
     text-decoration: none;
 }
 
@@ -46,84 +46,56 @@ p {
     font-size: 16px;
 }
 
-.hero {
-    height: 200px;
-    width: 100%;
-    margin-bottom: 25px;
-    margin-top: 25px;
-    background-image: url("https://via.placeholder.com/150");
-    background-size: cover;
-    background-position: center;
-}
-
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
-content {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+    margin-top: 20px;
 }
 
-.benefits {
+.main-info {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    background-color: #313030;
+    color: #ec4b4b;
+}
+
+.main-info h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+    color: #eba3a3;
+}
+
+.contact {
     margin-right: 20px;
+    margin-top: 20px;
     padding: 20px;
     clear: both;
     float: right;
     width: 20%;
     height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    background-color: #313030;
 }
 
-.benefit-info {
+.contact-info {
     margin-bottom: 32px;
-    color: #ffffff;
+    color: #ec4b4b;
     text-align: center;
 }
 
-.benefit-info h3 {
+.contact-info h3 {
     margin-bottom: 10px;
     text-align: center;
+    color: #eba3a3;
 }
 
-.benefit-info h2 {
+.contact-info h2 {
     margin-bottom: 10px;
     text-align: center;
-}
-
-.content-info {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.content-info img {
-    max-height: 200px;
-}
-
-.content-info h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-align: center;
-}
-
-footer h2 {
-    font-size: 20px;
 }
